# iacgen

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  logging.rs  main.rs
src/aws/s3/: fetcher.rs  mod.rs  model.rs
src/core/: generator.rs  mod.rs  traits.rs
src/output/: file.rs  mod.rs  stdout.rs
src/terraform/: mod.rs  s3.rs
