[package]
name = "iacgen"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/crallen/iacgen"
authors = ["Chris Allen <crallen@users.noreply.github.com>"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.115" }
clap = { version = "4.5", features = ["derive"] }
hcl-rs = "0.19"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { version = "1", features = ["full"] }
tokio-macros = "2"
tracing = "0.1"
tracing-subscriber = { version ="0.3", features = ["time"] }